FindBug fixes